# 0g-storage-node

./: .bookignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  DockerfileStandard  DockerfileTurbo  NOTICE  README.md  SUMMARY.md  contributing.md  requirements.txt  rustlint.sh
.codespell/: wordlist.txt
.github/actions-rs/: grcov.yml
.github/workflows/: abi.yml  cc.yml  rust.yml  setup-rust.yml  tests.yml
common/append_merkle/: Cargo.toml
common/append_merkle/src/: lib.rs  merkle_tree.rs  metrics.rs  node_manager.rs  proof.rs  sha3.rs
common/channel/: Cargo.toml
common/contract-interface/: Cargo.toml  build.rs
common/contract-wrapper/: Cargo.toml
common/contract-wrapper/src/: lib.rs
common/directory/: Cargo.toml
common/hashset_delay/: Cargo.toml
common/hashset_delay/src/: hashset_delay.rs
common/lighthouse_metrics/: Cargo.toml
common/merkle_light/: Cargo.toml  README.md  clippy.toml
common/merkle_light/benches/: crypto_sha512.rs  ring_sha512.rs
common/merkle_light/benches/hash512/: hash512.rs  mod.rs
common/merkle_light/benches/ringx/: init.rs  mod.rs
common/merkle_light/examples/: no_std.rs
common/merkle_light/src/: hash.rs  hash_impl.rs  lib.rs  merkle.rs  proof.rs  test_cmh.rs  test_item.rs
common/merkle_tree/: Cargo.toml
common/merkle_tree/src/: lib.rs
common/spec/: Cargo.toml
common/task_executor/: Cargo.toml
common/task_executor/src/: lib.rs  test_utils.rs
common/zgs_seal/: Cargo.toml
doc/: README.md  architecture.md  contributing.md  install.md  introduction.md  k-v-store.md  log-system.md  overview.md  run.md  transaction-processing.md
docs/: README.md  architecture.md  introduction.md  k-v-store.md  log-system.md  onebox-test.md  run.md  transaction-processing.md
node/: Cargo.toml  build.rs
node/chunk_pool/: Cargo.toml
node/chunk_pool/src/: handler.rs  lib.rs
node/chunk_pool/src/mem_pool/: chunk_cache.rs  chunk_pool_inner.rs  chunk_write_control.rs  mod.rs
node/file_location_cache/: Cargo.toml
node/file_location_cache/src/: file_location_cache.rs  lib.rs  test_util.rs
node/log_entry_sync/: Cargo.toml
node/log_entry_sync/src/: lib.rs
node/log_entry_sync/src/rpc_proxy/: eth.rs  mod.rs
node/log_entry_sync/src/sync_manager/: config.rs  data_cache.rs  log_entry_fetcher.rs  log_query.rs  metrics.rs  mod.rs
node/miner/: Cargo.toml
node/miner/src/: config.rs  lib.rs  loader.rs  metrics.rs  mine.rs  miner_id.rs  monitor.rs  pora.rs  pruner.rs  recall_range.rs  sealer.rs  service.rs  submitter.rs  watcher.rs
node/network/: Cargo.toml
node/network/src/: config.rs  lib.rs  nat.rs  service.rs
node/network/src/behaviour/: gossip_cache.rs  gossipsub_scoring_parameters.rs  mod.rs
node/network/src/discovery/: enr.rs  enr_ext.rs  mod.rs
node/network/src/peer_manager/: config.rs  mod.rs  network_behaviour.rs  peerdb.rs
node/network/src/peer_manager/peerdb/: client.rs  peer_info.rs  sync_status.rs
node/network/src/rpc/: handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs  rate_limiter.rs
node/network/src/rpc/codec/: base.rs  mod.rs  ssz_snappy.rs
node/network/src/types/: globals.rs  mod.rs  pubsub.rs  topics.rs
node/network/tests/: pm_tests.rs  rpc_tests.rs
node/network/tests/common/: mod.rs  swarm.rs
node/pruner/: Cargo.toml
node/pruner/src/: lib.rs
node/router/: Cargo.toml
node/router/src/: batcher.rs  lib.rs  libp2p_event_handler.rs  metrics.rs  peer_manager.rs  rate_limit.rs  service.rs
node/rpc/: Cargo.toml  build.rs
node/rpc/proto/: zgs_grpc.proto
node/rpc/src/: config.rs  error.rs  lib.rs  middleware.rs  rpc_helper.rs  types.rs
node/rpc/src/admin/: api.rs  impl.rs
node/rpc/src/miner/: api.rs  impl.rs  mod.rs
node/rpc/src/zgs/: api.rs  impl.rs  mod.rs
node/rpc/src/zgs_grpc/: impl.rs  mod.rs  zgs_grpc.rs
node/shared_types/: Cargo.toml
node/shared_types/src/: lib.rs  proof.rs
node/src/: log.rs  main.rs
node/src/cli/: mod.rs
node/src/client/: builder.rs  environment.rs  mod.rs
node/src/config/: config_macro.rs  convert.rs  mod.rs
node/storage/: Cargo.toml
node/storage-async/: Cargo.toml
node/storage-async/src/: lib.rs
node/storage/benches/: benchmark.rs
node/storage/src/: config.rs  error.rs  lib.rs
node/storage/src/log_store/: config.rs  flow_store.rs  log_manager.rs  metrics.rs  mod.rs  seal_task_manager.rs  tests.rs  tx_store.rs
node/storage/src/log_store/load_chunk/: bitmap.rs  chunk_data.rs  mod.rs  seal.rs  serde.rs
node/sync/: Cargo.toml
node/sync/src/: context.rs  lib.rs  service.rs  test_util.rs
node/sync/src/auto_sync/: batcher.rs  batcher_random.rs  batcher_serial.rs  historical_tx_writer.rs  manager.rs  metrics.rs  mod.rs  sync_store.rs  tx_store.rs
node/sync/src/controllers/: metrics.rs  mod.rs  peers.rs  serial.rs
run/: config-testnet-standard.toml  config-testnet-turbo.toml  config-testnet.toml  config.toml  log_config  log_config_debug  zgs.sh
scripts/: check_abis.sh  search_abi.sh  update_abis.sh  update_config.sh
storage-contracts-abis/: 0g-storage-contracts-rev  ChunkLinearReward.json  DummyMarket.json  DummyReward.json  FixedPrice.json  FixedPriceFlow.json  Flow.json  OnePoolReward.json  PoraMine.json  PoraMineTest.json  README.md
tests/: cache_test.py  ccov.sh  cli_submission_test.py  crash_test.py  dep_pip3.sh  example_test.py  fuzz_test.py  long_time_mine_test_local.py  mine_test.py  mine_with_market_test.py  network_discovery_test.py  network_discovery_upgrade_test.py  network_id_test.py  network_tcp_shard_test.py  node_cache_test.py  parallel_submission_test.py  partial_submission_test.py  pruner_test.py  random_test.py  readme.md  recovery_test.py  revert_test.py  root_consistency_test.py  rpc_test.py  same_root_test.py  shard_submission_test.py  shard_sync_test.py  snapshot_test.py  submission_test.py  sync_auto_historical_test.py  sync_auto_random.py  sync_auto_random_test.py  sync_auto_random_v2_test.py  sync_auto_sequential.py  sync_auto_test.py  sync_auto_test_ignore.py  sync_chunks_test.py  sync_file_test.py  sync_test.py  test_all.py
tests/config/: MockToken.json  (+6 more)
version-meld/: README.md
(+68 files in other folders)
