[workspace]

members = [
    "common/channel",
    "common/directory",
    "common/hashset_delay",
    "common/lighthouse_metrics",
    "common/merkle_tree",
    "common/task_executor",
    "common/zgs_version",
    "common/unused_port",
    "common/append_merkle",

    "node",
    "node/chunk_pool",
    "node/file_location_cache",
    "node/log_entry_sync",
    "node/miner",
    "node/network",
    "node/pruner",
    "node/router",
    "node/rpc",
    "node/shared_types",
    "node/storage",
    "node/storage-async",
    "node/sync",
]
resolver = "2"

[workspace.dependencies]
metrics = { git = "https://github.com/Conflux-Chain/conflux-rust.git", rev = "c4734e337c66d38e6396742cd5117b596e8d2603" }

[patch.crates-io]
discv5 = { path = "version-meld/discv5" }
eth2_ssz = { path = "version-meld/eth2_ssz" }
enr = { path = "version-meld/enr" }

[profile.bench.package.'storage']
debug = true