[package]
name = "hashset_delay"
version = "0.2.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
tokio-util = { version = "0.6.10", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.19.2", features = ["time", "rt-multi-thread", "macros"] }
