[package]
name = "rpc"
version = "0.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append_merkle = { path = "../../common/append_merkle" }
miner = {path = "../miner"}
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
network = { path = "../network" }
file_location_cache = { path = "../file_location_cache" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
base64 = "0.13.0"
shared_types = { path = "../shared_types" }
sync = { path = "../sync" }
task_executor = { path = "../../common/task_executor" }
tokio = { version = "1.19.2", features = ["macros", "sync"] }
tracing = "0.1.35"
chunk_pool = { path = "../chunk_pool" }
storage = { path = "../storage" }
storage-async = { path = "../storage-async" }
merkle_light = { path = "../../common/merkle_light" }
merkle_tree = { path = "../../common/merkle_tree"}
futures-channel = "^0.3"
metrics = { workspace = true }
parking_lot = "0.12.3"
tonic = { version = "0.9.2", features = ["transport"] }
prost = "0.11.9"
prost-types = "0.11.9"
tonic-reflection = "0.9.2"
ethereum-types = "0.14"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"
