[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

[dependencies]
append_merkle = { path = "../../common/append_merkle"}
merkle_tree = { path = "../../common/merkle_tree"}
zgs_spec = { path = "../../common/spec"}
anyhow = { version = "1.0.58", features = ["backtrace"] }
ethereum-types = "0.14"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
merkle_light = { path = "../../common/merkle_light" }
tiny-keccak = "2.0.2"
tracing = "0.1.35"
typenum = "1.15.0"
serde = { version = "1.0.137", features = ["derive"] }
chrono = "0.4.19"
